MDEV-5672 MariaDB 10.0.8 doesn't compile without perfschema

apply the upstream patch