storage/xtradb/include/sync0sync.h
@@ -358,7 +358,7 @@ NOTE! Use the corresponding macro in the header file, not this function
 directly. Tries to lock the mutex for the current thread. If the lock is not
 acquired immediately, returns with return value 1.
 @return	0 if succeed, 1 if not */
-UNIV_INTERN
+UNIV_INLINE
 ulint
 mutex_enter_nowait_func(
 /*====================*/
